--- a/app/src/main/res/layout/fragment_profil_testimoni.xml
+++ b/app/src/main/res/layout/fragment_profil_testimoni.xml
@@ -5,9 +5,8 @@
     android:layout_height="match_parent"
     tools:context=".ui.profil_testimoni.ProfilTestimoniFragment">
 
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Hello" />
-
+        android:padding="16dp" />
 </FrameLayout>
